# rlaas

./: .gitignore  .golangci.yml  README.md  go.mod  go.sum
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  sdk-release.yml
api/openapi/: openapi.yaml
api/proto/: rlaas.proto
benchmarks/: README.md  evaluate_bench_test.go  http_api_bench_test.go  memory_store_bench_test.go
cmd/rlaas-agent/: main.go  main_test.go
cmd/rlaas-server/: main.go  main_test.go
docs/: api.html  design.html  features.html  getting-started.html  index.html  sdk-release.md  sdks.html
docs/css/: style.css
examples/: policies.json
examples/http/: main.go  main_test.go
internal/adapter/grpc/: interceptor.go  interceptor_test.go
internal/adapter/http/: middleware.go  middleware_test.go
internal/adapter/otel/: hook.go  hook_test.go  processor.go  processor_test.go
internal/algorithm/: interface.go
internal/algorithm/common/: common.go  common_test.go
internal/algorithm/quota/: quota.go  (+1 more)
internal/config/: config.go
internal/key/: builder.go  builder_test.go
internal/metrics/: metrics.go  metrics_test.go
internal/model/: model.go
internal/region/: allocator.go  allocator_test.go
internal/server/: http.go  http_test.go  listen_test.go
internal/store/: interfaces.go
internal/version/: version.go
pkg/rlaas/: client.go  client_test.go
sdk/dotnet/: README.md
sdk/java/: README.md  pom.xml
sdk/python/: README.md  pyproject.toml
sdk/python/rlaas_sdk/: __init__.py  client.py  types.py
sdk/typescript/: README.md  package.json  tsconfig.json
(+45 files in other folders)
